5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1834_1276.log
== TEST (2019-06-30 14:02:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for j in range(7):
	a = m[j] + sum(j)
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:02:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for j in range(7):
	a = m[j] + sum(m[j])
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:03:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for j in range(7):
	a = sum(m[j])
	print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:05:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(7):
	a = m[j] + m[i,j]
	print(a)
	
-- ERROR:
File "XXXX", line 7
    a = m[j] + m[i,j]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:06:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(7):
		a = m[j] + m[i,j]
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:07:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for i in range(m.shape[0]):
	for j in range(m.shape[1]):
		a = m[j] + m[i,j]
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:08:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
a = 0
for j in range(m.shape[1]):
	for i in range(m.shape[0]):
		a = m[j] + m[i,j]
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:50:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(m.shape(7)):
		v[j] = v[j] + m[i,j]
print(max(v))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:51:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(m.shape[7]):
		v[j] = v[j] + m[i,j]
print(max(v))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:51:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
print(max(v))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:55:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(7,dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
print(max(v))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 19:56:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(7,dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
print(v)
print(max(v))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:00:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(7,dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
for i in range(7):
	if (v[i] == max(v)):
		print(i)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:01:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(7,dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
for i in range(7):
	if (v[i] == max(v)):
		print(i+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:01:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(7,dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
for k in range(7):
	if (v[k] == max(v)):
		print(k+1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:01:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Insira uma matriz: ")))
v = zeros(7,dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[j] = v[j] + m[i,j]
for k in range(7):
	if (v[k] == max(v)):
		print(k+1)

-- EXECUTION TIME:
1.14019
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
